# hemera

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  host.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: docker-build-push.yml  docker-registry-ca.crt  publish.yml  python-app-test.yml  test-and-build.yml
github/: __init__.py  function.json
src/hemera/: dataclasses.py  datatypes.py  deprecated.py  exceptions.py  handlers.py  homeautomation.py  http_request_handler.py  metadata.py  notifications.py  slack.py  types.py
tests/function_app/: test_github.py
tests/hemera/: conftest.py  test_api_github.py  test_deprecated.py  test_handlers.py  test_homeautomation.py  test_http_requests.py  test_metadata.py  test_notifications.py  test_slack.py  test_types.py
tests/hemera/resources/: http_request_data.py
