[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hemera"
version = "0.1.0"
description = "A Repository for the Hemera Project"
authors = ["rterluun"]
readme = "README.md"
packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
azure-functions = "^1.17.0"
slack_sdk = "^3.26.0"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^7.3.2"}
pytest = "^7.4.3"
pre-commit = "^3.5.0"
isort = "^5.12.0"
black = "^23.11.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  ".", "src",
]

[tool.isort]
profile = "black"
src_paths = [".", "src", "tests"]
